--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -77,6 +77,13 @@
     opacity: 1
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.28)
 
+  &.transparent
+    background: none
+    color: $color-red
+
+    &:hover
+      box-shadow: none
+
   // Transitions
   &.move
     > span, > .arrow
@@ -96,11 +103,11 @@
         top: calc(100% - 7.4rem)
         left: 4rem
         transform: translateX(-40px)
-        transition: transform 0.2s ease-in-out, opacity 0.3s ease
+        transition: transform 0.15s ease-in-out, opacity 0.25s ease
         transition-delay: 0s
 
       &.second
-        transition: transform 0.2s ease-in-out, opacity 0.3s ease
+        transition: transform 0.15s ease-in-out, opacity 0.25s ease
         transition-delay: 0.2s
 
 
@@ -109,7 +116,7 @@
         &.first
           opacity: 1
           transform: translateX(0px)
-          transition-delay: 0.2s
+          transition-delay: 0.15s
 
         &.second
           opacity: 0
@@ -122,7 +129,7 @@
         transform: translateX(25px)
 
     > span
-      transition: transform 0.2s ease-in-out
+      transition: transform 0.15s ease-in-out
       transition-delay: 0s
 
     > .arrow
@@ -133,19 +140,19 @@
         left: 0
         transform: translateX(-35px)
         position: absolute
-        transition: transform 0.2s ease-in-out, opacity 0.3s ease
+        transition: transform 0.15s ease-in-out, opacity 0.25s ease
         transition-delay: 0s
 
       &.second
-        transition: transform 0.2s ease-in-out, opacity 0.3s ease
+        transition: transform 0.15s ease-in-out, opacity 0.25s ease
 
     &:hover
       > .label
-        transition-delay: 0.2s
+        transition-delay: 0.15s
         transform: translateX(55px)
 
       > .arrow.first
-        transition-delay: 0.2s
+        transition-delay: 0.15s
         transform: translateX(50px)
         opacity: 1
 
