--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -12,26 +12,32 @@
     display: flex
     align-items: flex-end
 
+    &:not(:hover)
+      > .inner
+        transform: translateY(100%)
+
+        > .desc
+          opacity: 0
+
+        > h3
+          transform: translateY(-100%)
+
     > .inner
-      padding: 3rem
-      overflow: hidden
-      margin-bottom: -1rem
-      transition: margin 0.2s ease
+      padding: 0 3rem 3rem 3rem
+
+      &, > h3, > .desc
+        transition: transform 0.3s ease, opacity 0.3s ease
 
       > h3
         font-size: 4rem
+        padding-bottom: 2rem
         text-transform: uppercase
-        line-height: 5rem
-        margin-bottom: 0.5rem
 
       > .desc
         font-size: 1.5rem
-        line-height: 0rem
-        opacity: 0
-        transition: line-height 0.2s 0.1s ease-in-out, opacity 0.2s ease
 
-        > p
-          transition: margin 0.2s ease-in-out
+        > p:not(:last-child)
+          margin-bottom: 2rem
 
         > .desktop
           display: block
@@ -42,19 +48,6 @@
         > .email, > .phone
           color: #fff
           display: block
-
-    &:hover
-
-      > .inner
-        margin-bottom: 0rem
-
-        > .desc
-          line-height: 2.4rem
-          opacity: 1
-          transition: line-height 0.2s ease-in-out, opacity 0.2s 0.1s ease
-
-          > .desktop, > .mobile
-            margin-bottom: 1.5rem
 
     > img
       position: absolute
@@ -110,14 +103,17 @@
       min-width: 0
 
       > .inner
-        padding: 1.5rem
+        padding: 0 1.5rem 1.5rem 1.5rem
 
         > h3
           font-size: 3rem
+          padding-bottom: 1.5rem
+
+        > .desc > p:not(:last-child)
+            margin-bottom: 1.5rem
 
       &:nth-child(2), &:nth-child(4), &:nth-child(5)
         grid-row: span 17
-
 
   @media screen and (max-width: 500px)
     display: block
