--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -39,6 +39,9 @@
         > p:not(:last-child)
           margin-bottom: 2rem
 
+        > a:not(:last-child)
+          margin-bottom: 1rem
+
         > .desktop
           display: block
 
