Add 'partners' to 'Our Work' page

--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -93,13 +93,13 @@
         z-index: 100
 
         > li
-          font-size: 3rem
-          font-weight: bold
+          font-size: 4rem
           margin: 1.5rem 0
           opacity: 0
           padding: 0.5rem
           pointer-events: auto
           transform: translateX(-8rem)
+          text-align: center
 
           @media screen and (max-height: 500px)
             margin: 1.5rem 0
@@ -115,6 +115,7 @@
           > a
             color: inherit
             position: relative
+            font-weight: bold
             text-decoration: none
             transition: color .2s ease
 
