Comment out 'follow mouse on first planet (home) + pulse animation'

--- a/src/components/moon.sass
+++ b/src/components/moon.sass
@@ -17,7 +17,7 @@ $eclipseTransition: margin 0.8s ease
     left: 60%
     transform: translate(-50%) translateY(-50%)
     transition: $eclipseTransition
-    animation: eclipse 5s ease-in-out infinite
+    //animation: eclipse 5s ease-in-out infinite
 
     &:after
       content: ''
