Add firstView animations to 'home'

--- a/src/animations.sass
+++ b/src/animations.sass
@@ -1,7 +1,43 @@
 @keyframes slideInLeft
   0%
     opacity: 0
-    transform: translatex(-12rem)
+    transform: translateX(-12rem)
   100%
     opacity: 1
     transform: none
+
+@keyframes slideInRight
+  0%
+    opacity: 0
+    transform: translateX(12rem)
+  100%
+    opacity: 1
+    transform: none
+
+@keyframes slideInBottom
+  0%
+    opacity: 0
+    transform: translateY(2rem)
+  100%
+    opacity: 1
+    transform: none
+
+@keyframes rotateIn
+  0%
+    opacity: 0
+    transform: rotate(20deg) translateY(-5px) translateX(25px)
+
+  50%
+    opacity: 1
+
+  100%
+    transform: rotate(0deg) translateY(0) translateX(0)
+    opacity: 1
+
+@keyframes fadeIn
+  0%
+    opacity: 0
+
+  100%
+    opacity: 1
+
