--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -1,4 +1,5 @@
 @import '../settings.sass'
+@import '../animations.sass'
 
 .header
   background: none
@@ -8,6 +9,10 @@
   position: absolute
   width: 100%
   z-index: 2
+
+  &.fadeIn
+    opacity: 0
+    animation: fadeIn .3s 1.6s forwards linear
 
   > .inner
     align-items: center
