Add parallax effect to hero text landing

--- a/src/animations.sass
+++ b/src/animations.sass
@@ -25,13 +25,13 @@
 @keyframes rotateIn
   0%
     opacity: 0
-    transform: rotate(20deg) translateY(-5px) translateX(25px)
+    transform: rotate(20deg) translateY(-7px) translateX(45px) scale(1.6)
 
   50%
     opacity: 1
 
   100%
-    transform: rotate(0deg) translateY(0) translateX(0)
+    transform: rotate(0deg) translateY(0) translateX(0) scale(1.6)
     opacity: 1
 
 @keyframes fadeIn
