--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -44,7 +44,7 @@
 
         &.firstView
           opacity: 0
-          animation: rotateIn 1.6s forwards linear
+          animation: fadeIn 1.6s forwards ease-in
 
     > .information
       align-items: center
