Add custom meta titles

--- a/src/fonts.sass
+++ b/src/fonts.sass
@@ -1,24 +1,29 @@
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 300
+  font-display: fallback
   src: url('./fonts/SpaceGrotesk-Light.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Light.woff') format('woff')
 
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 400
+  font-display: fallback
   src: url('./fonts/SpaceGrotesk-Regular.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Regular.woff') format('woff')
 
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 500
+  font-display: fallback
   src: url('./fonts/SpaceGrotesk-Medium.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Medium.woff') format('woff')
 
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 600
+  font-display: fallback
   src: url('./fonts/SpaceGrotesk-SemiBold.woff2') format('woff2'), url('./fonts/SpaceGrotesk-SemiBold.woff') format('woff')
 
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 700
+  font-display: fallback
   src: url('./fonts/SpaceGrotesk-Bold.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Bold.woff') format('woff')
