--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -47,80 +47,43 @@
           animation: fadeIn 1.6s forwards ease-in
 
     > .information
-      align-items: center
       display: flex
-      height: 75rem
-      justify-content: center
       position: relative
       pointer-events: none
+      min-height: 80rem
 
       > .foundationPillar
-        left: -10rem
-        position: absolute
-        overflow: hidden
 
-        > h2
-          position: relative
-          display: block
-          transform: translateX(20rem) translateZ(0)
-          opacity: 0
-          pointer-events: auto
-          cursor: default
+        > h1
+          color: $color-red
+          margin: 0 0 5rem 10rem
 
-          @for $i from 1 through 3
-            &:nth-child(#{$i})
-              transition: transform 0.3s #{0.2 * $i}s ease, opacity 0.3s #{0.2 * $i}s ease
-
-        &:after
-          background-image: linear-gradient(90deg, rgba(7,11,19,0.00) 0%, #070B13 85%)
-          content: ''
-          height: 100%
-          position: absolute
-          top: 0
-          width: 110%
-
-        > h2
-          color: #0E1626
-          font-size: 14rem
-          line-height: 14rem
-          text-transform: uppercase
-          transition: color 0.8s ease
-
-          &.active
-            color: #2C446F
-
-      > p
-        font-size: 2.4rem
-        max-width: 56.3rem
-        position: absolute
-        text-align: center
-        z-index: 1
-        opacity: 0
-        visibility: hidden
-        transition: opacity 0.8s ease, visibility 0.8s ease
-
-        &.active
-          opacity: 1
-          visibility: visible
-
-        > span
+        > p
+          color: #152137
+          font-size: 10rem
           font-weight: bold
+          line-height: 14rem
+          max-width: 80rem
+          opacity: 1
+          position: relative
+
+          > span
+            position: relative
 
       > .moon
-        transition: opacity 0.7s ease
-        opacity: 0
         position: absolute
-        right: -18rem
+        right: -28rem
         top: 2rem
+        transition: opacity 0.7s ease
+        z-index: -1
 
-      &.inView
-        > .foundationPillar
-          > h2
-            transform: translateX(0) translateZ(0)
-            opacity: 1
-
-        > .moon
-          opacity: 1
+      > .moonSmall
+        bottom: -8rem
+        left: -20rem
+        position: absolute
+        transform: scale(1) rotate(-40deg)
+        transition: opacity 0.7s ease
+        z-index: -1
 
     > .work
       margin-top: 10rem
@@ -165,12 +128,8 @@
         position: absolute
         right: -10rem
 
-    @media screen and (max-width: 1350px)
-      > .information > .foundationPillar
-        left: -2rem
-
     @media screen and (max-width: 800px)
-      > .welcome > h1, > .work > .text
+      > .welcome > h1, > .work > .text, > .information > .foundationPillar > h1
         font-size: 3rem
         margin-left: 0
 
@@ -183,10 +142,50 @@
         margin-top: -8rem
         position: absolute
 
-      > .information > .moon
-        left: 85%
-        right: auto
-        top: 2rem
+      > .information
+        min-height: 70rem
+
+        > .foundationPillar
+          max-width: 58rem
+
+          > h1
+            margin-bottom: 1rem
+
+          > p
+            font-size: 7.5rem
+            line-height: 10rem
+
+        > .moon
+          right: -35rem
+
+        > .moonSmall
+          left: -28rem
+          bottom: -20rem
+          transform: scale(0.6) rotate(-40deg)
 
       > .work > .button
         left: 100%
+
+    @media screen and (max-width: 520px)
+      > .information
+        > .foundationPillar
+          max-width: 100%
+          margin-top: 50%
+
+          > p
+            font-size: 4.5rem
+            line-height: 8rem
+
+      > .work > .button
+        left: 100%
+
+  $steps: 20
+  @keyframes noise
+    @for $i from 0 through $steps
+      #{percentage($i*(1/$steps))}
+        clip: rect(random(100)+px,9999px,random(200)+px,0)
+
+  @keyframes noiseTwo
+    @for $i from 0 through $steps
+      #{percentage($i*(1/$steps))}
+        clip: rect(random(100)+px,9999px,random(200)+px,0)
