--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -43,11 +43,13 @@
           width: 1.7rem
           height: auto
           position: relative
-          margin-top: -0.3rem
+          margin-top: 0.1rem
 
         > span
           margin-left: 1.8rem
           opacity: 0.8
+          display: flex
+          align-items: center
 
       > h1
         font-size: 4rem
