--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -12,13 +12,16 @@
   display: inline-flex
   transition: box-shadow 0.2s ease
   overflow: hidden
-  height: 8rem
+  justify-content: center
+  align-items: center
+  min-height: 8rem
 
   &.fullsize
     display: flex
     flex-direction: column
     font-size: 4rem
     height: 100%
+    align-items: flex-start
     justify-content: flex-end
     padding: 4rem
     text-align: left
@@ -52,6 +55,7 @@
     left: 0
     position: relative
     top: 0.2rem
+    min-width: 3.6rem
     width: 3.6rem
     transition: margin 0.2s ease
 
