--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -27,6 +27,11 @@
     > a
       color: inherit
       font-size: inherit
+      transition: color 0.1s ease
+
+      &:hover
+        opacity: 1
+        color: #B3B4B6
 
       > svg
         position: relative
@@ -44,6 +49,9 @@
       position: relative
       width: 2.5rem
       z-index: 11
+
+      &:hover
+        opacity: 0.8
 
       &:before, &:after
         background: white
