--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -70,6 +70,44 @@
           > span
             position: relative
 
+            &.glitch
+              position: relative
+
+              &:after
+                animation: noise 3s infinite linear alternate-reverse
+                background: $color-darker-blue
+                clip: rect(0,900px,0,0)
+                color: #152137
+                content: attr(data-text)
+                left: 0.2rem
+                letter-spacing: -0.1rem
+                overflow: hidden
+                position: absolute
+                text-shadow: -0.1rem 0 #581E39
+                top: -0.3rem
+
+              &:before
+                animation: noiseTwo 4s infinite linear alternate-reverse
+                background: $color-darker-blue
+                clip: rect(0,900px,0,0)
+                color: #152137
+                content: attr(data-text)
+                left: -0.2rem
+                letter-spacing: -0.1rem
+                overflow: hidden
+                position: absolute
+                text-shadow: 0.1rem 0 #374C73
+                top: -0.3rem
+
+              &.red:after
+                text-shadow: -0.1rem 0 #581E39
+
+              &.blue:after
+                text-shadow: -0.1rem 0 #5660A0
+
+              &.white:after
+                text-shadow: -0.1rem 0 #A3A3A3
+
       > .moon
         position: absolute
         right: -28rem
