--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -59,7 +59,7 @@
           margin: 0 0 5rem 10rem
 
         > p
-          color: #152137
+          color: white
           font-size: 10rem
           font-weight: bold
           line-height: 14rem
@@ -77,36 +77,27 @@
                 animation: noise 3s infinite linear alternate-reverse
                 background: $color-darker-blue
                 clip: rect(0,900px,0,0)
-                color: #152137
+                color: white
                 content: attr(data-text)
                 left: 0.2rem
                 letter-spacing: -0.1rem
                 overflow: hidden
                 position: absolute
-                text-shadow: -0.1rem 0 #581E39
+                text-shadow: -0.1rem 0 $color-red
                 top: -0.3rem
 
               &:before
                 animation: noiseTwo 4s infinite linear alternate-reverse
                 background: $color-darker-blue
                 clip: rect(0,900px,0,0)
-                color: #152137
+                color: white
                 content: attr(data-text)
                 left: -0.2rem
                 letter-spacing: -0.1rem
                 overflow: hidden
                 position: absolute
-                text-shadow: 0.1rem 0 #374C73
+                text-shadow: 0.1rem 0 #253657
                 top: -0.3rem
-
-              &.red:after
-                text-shadow: -0.1rem 0 #581E39
-
-              &.blue:after
-                text-shadow: -0.1rem 0 #5660A0
-
-              &.white:after
-                text-shadow: -0.1rem 0 #A3A3A3
 
       > .moon
         position: absolute
