--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -100,6 +100,12 @@
                 text-shadow: 0.2rem 0 #71A1FF
                 top: -0.3rem
 
+              &:nth-child(2)
+                left: -0.3rem
+
+                &:after, &:before
+                  letter-spacing: -0.2rem
+
       > .moon
         position: absolute
         right: -28rem
