--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -23,6 +23,9 @@
     max-width: $max-width
     padding: 5rem 3rem
     width: 100%
+    @media screen and (min-width: 1400px)
+      padding: 5rem 13rem
+      max-width: none
 
     > a
       color: inherit
