--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -42,6 +42,7 @@
 
     > .workplaces
       position: relative
+      padding: 0 1rem
 
       > .text
         margin: 0 0 10rem 10rem
@@ -119,6 +120,7 @@
     > .positions
       margin: 25rem 0
       position: relative
+      padding: 0 1rem
 
       > .text
         margin-left: 10rem
@@ -222,6 +224,9 @@
         margin-top: -8rem
         position: absolute
         transform: scale(1)
+
+      > .workplaces, > .positions
+        padding: 0
 
       > .positions
         margin: 4rem 0
