--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -203,6 +203,14 @@
       > .work > .button
         left: 100%
 
+    @media screen and (max-width: 560px)
+      > .information
+        > .moon
+          right: -45rem
+
+        > .moonSmall
+          left: -30rem
+
     @media screen and (max-width: 520px)
       > .information
         > .foundationPillar
