Bug fix: extra scroll on /work after first scrolling on home

--- a/src/routes/about.sass
+++ b/src/routes/about.sass
@@ -3,6 +3,7 @@
 
 .view
   overflow-x: hidden
+  overflow-x: hidden
   padding-top: 14rem
 
   > .inner
@@ -29,7 +30,7 @@
         position: relative
         z-index: 1
         opacity: 0
-        animation: slideInLeft 0.3s forwards
+        animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         > span
           color: $color-red
