--- a/src/components/moon.sass
+++ b/src/components/moon.sass
@@ -174,6 +174,24 @@ $eclipseTransition: margin 1.8s ease-out
         bottom: 47%
         left: 47%
 
+  &.topMiddle
+    > .planet
+      > .shine
+        top: auto
+        left: auto
+        bottom: 65%
+        right: 0
+
+    > .background
+      top: 42%
+      left: 45%
+
+      &:after
+        right: auto
+        top: auto
+        bottom: 47%
+        left: 47%
+
   @keyframes eclipse
     0%
       transform: translate(-50%) translateY(-50%) scale(1)
