--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -30,7 +30,7 @@
         white-space: pre-line
         z-index: 1
         opacity: 0
-        animation: slideInLeft 0.3s forwards
+        animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         > span
           color: $color-red
