--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -29,10 +29,10 @@
         position: relative
         z-index: 1
         opacity: 0
-        animation: slideInLeft 0.3s forwards
+        animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         &.firstView
-          animation: slideInBottom 0.8s 1.1s forwards
+          animation: slideInBottom 0.8s 1.1s, fadeIn 0.8s 1.1s forwards
 
         > span
           color: $color-red
@@ -114,10 +114,9 @@
         z-index: -1
 
       > .moonSmall
-        bottom: -8rem
-        left: -20rem
+        bottom: -15rem
+        left: -12rem
         position: absolute
-        transform: scale(1) rotate(-40deg)
         transition: opacity 0.7s ease
         z-index: -1
 
