--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -29,7 +29,7 @@
         position: relative
         z-index: 1
         opacity: 0
-        animation: slideInLeft 0.3s forwards
+        animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         > span
           color: $color-red
