various style fixes

--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -211,6 +211,10 @@
           &:nth-child(2n)
             flex-direction: row-reverse
 
+    @media screen and (max-width: 1000px)
+      > .heroText > h1
+        margin: auto
+
     @media screen and (max-width: 800px)
       > .heroText
         min-height: 60rem
