--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -62,6 +62,10 @@
           margin-top: 2rem
           max-width: 37.7rem
 
+    @media screen and (max-width: 1000px)
+      > .text > h1
+        margin: auto
+
     @media screen and (max-width: 800px)
       > .text
         min-height: 60rem
