--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -106,6 +106,7 @@
 
       > .content
         display: flex
+        justify-content: space-evenly
         flex-wrap: wrap
         left: -2rem
         margin-top: 5rem
@@ -124,6 +125,10 @@
     @media screen and (max-width: 1200px)
       > .partners > .content > .partner > img
         width: 15rem
+
+    @media screen and (max-width: 1000px)
+      > .welcome > h1
+        margin: auto
 
     @media screen and (max-width: 950px)
       > .partners > .content > .partner > img
