Add link to 'The Bond'

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -57,6 +57,10 @@
           position: relative
           white-space: pre-line
           z-index: 2
+          text-align: center
+
+          > a
+            color: $color-red
 
         > a:not(:last-child)
           margin-right: 2rem
