Add active state to menu items + Add ability to close menu with 'ESC' key

--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -135,6 +135,10 @@
             text-decoration: none
             transition: color .2s ease
 
+            &.active
+              color: $color-red
+              pointer-events: none
+
             &:before
               background: $color-red
               content: ''
