Various style fixes

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -45,9 +45,13 @@
           font-weight: 500
           white-space: pre-line
           text-align: center
-          max-width: 80rem
-          padding-bottom: 3rem
+          max-width: 86rem
+          padding: 0 3rem 3rem 3rem
           margin: auto
+
+          &.removePadding
+            padding-bottom: 0
+            margin-bottom: 0
 
         > p
           font-size: 2rem
@@ -131,3 +135,9 @@
 
       > h1
         font-size: 2.5rem
+
+  @media screen and (max-width: 700px)
+    > .inner > .content > .block
+
+      > h1
+        font-size: 2rem
