--- a/src/cases/components/hero-header.sass
+++ b/src/cases/components/hero-header.sass
@@ -15,3 +15,11 @@
   > h2
     font-size: 4rem
     font-weight: 500
+
+  @media screen and (max-width: $small-grid)
+
+    > h1
+      font-size: 4rem
+
+    > h2
+      font-size: 3rem
