--- a/src/cases/components/parallax-bump-block.sass
+++ b/src/cases/components/parallax-bump-block.sass
@@ -65,9 +65,15 @@
     @media screen and (max-width: $small-grid + 100px)
       flex-direction: column-reverse
       text-align: center
+      padding: 9.6rem 0 9.6rem 0
 
-      > .content > h1
-        margin-top: 0rem
+      > .content
+        margin: auto
+        padding: 0 3rem
+
+        > h1
+          margin-top: 0rem
+          font-size: 3rem
 
       > .parallaxes
         width: 55%
