--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -63,6 +63,15 @@
         font-weight: 600
         text-transform: uppercase
 
+      @media screen and (min-width: 801px)
+        &.small
+
+          > .desc
+            font-size: 1.5rem
+
+          > .type
+            font-size: 1.4rem
+
     > img
       position: relative
       z-index: 1
