added sleepcure case

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -129,6 +129,19 @@
       top: -2.5rem
       width: calc(100% + 12rem)
       z-index: -1
+  
+  &.sleepcureByTheWay
+    h1
+      color: black
+    > .block
+      > .content
+        padding-bottom: 0rem
+
+  &.sleepcure
+    h1
+      color: black
+    .block
+      padding: 4rem 0rem
 
   @media screen and (max-width: 1000px)
     > .inner > .content > .block
