--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -59,6 +59,25 @@
           @media screen and (max-width: $small-grid + 50px)
             margin-left: 0
             width: 80%
+        > .sleepcureImg
+          max-width: 100%
+
+        > .sleepcure
+          height: 100%
+          display: flex
+          flex-direction: column
+          padding: 4rem 0rem
+          > .arrayBlock
+            padding-top: 9.4rem
+            @media screen and (max-width: $small-grid + 50px)
+              &:first-child
+                padding-top: 0
+            h1
+              color: #F35C49
+            p
+              font-size: 2rem
+              margin-top: 3rem
+              color: #161D2B
 
       @media screen and (max-width: $medium-grid)
 
