--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -92,17 +92,22 @@
           height: 100%
           min-width: 100%
 
-    &:first-child
+    &:first-child, &:nth-child(4)
       grid-column: span 6
       height: 40rem
 
       &.hide
         display: none
 
-    &:nth-child(4), &:nth-child(5), &:nth-child(6),
-    &:nth-child(9), &:nth-child(10), &:nth-child(11),
-    &:nth-child(14), &:nth-child(15), &:nth-child(16),
+    &:nth-child(5), &:nth-child(6), &:nth-child(7),
+    &:nth-child(10), &:nth-child(11), &:nth-child(12),
+    &:nth-child(15), &:nth-child(16), &:nth-child(17),
       grid-column: span 2
+
+  &.homeProjects
+    .project:nth-child(4)
+      grid-column: span 2
+      height: 34rem
 
   &.browseCase
     > .project
@@ -112,10 +117,18 @@
 
   @media screen and (max-width: 1000px)
     > .project
-      &:nth-child(4), &:nth-child(5), &:nth-child(6),
-      &:nth-child(9), &:nth-child(10), &:nth-child(11),
-      &:nth-child(14), &:nth-child(15), &:nth-child(16),
+      &:nth-child(4),
+      &:nth-child(5), &:nth-child(6), &:nth-child(7),
+      &:nth-child(10), &:nth-child(11), &:nth-child(12),
+      &:nth-child(15), &:nth-child(16), &:nth-child(17),
         grid-column: span 3
+        height: 34rem
+    &.homeProjects
+      .project:nth-child(4)
+        grid-column: span 3
+        height: 34rem
+
+        
 
   @media screen and (max-width: 800px)
     display: block
