--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -29,6 +29,7 @@
 
       > .text
         margin-bottom: 2.5rem
+        white-space: pre-line
 
       > .item
         margin-top: 2.6rem
@@ -127,3 +128,46 @@
       width: 80%
       margin: 0 auto
       margin-bottom: -40%
+
+  &.bandbondPhone > .inner
+
+    > img
+      width: 57%
+      height: 57%
+      position: relative
+      margin-left: -10rem
+      margin-bottom: -10rem
+      @media screen and (max-width: 1100px)
+        width: 42%
+        height: 42%
+        margin-left: 0
+        margin-bottom: -12rem
+
+    @media screen and (max-width: 960px)
+      flex-direction: column-reverse
+
+      > .content > p
+        max-width: unset
+
+      > img
+        width: 35%
+        height: 35%
+        margin-left: -5rem
+
+  &.bandbondPhoneBg
+    background: url('../../images/cases/bandbond-2.jpg')
+    background-size: cover
+    padding: 2rem 3rem
+
+    > .inner
+      padding: 2rem 3rem
+      > img
+        width: 80%
+        height: 80%
+        position: relative
+        margin-bottom: 0rem
+        margin-right: -35rem
+        @media screen and (max-width: 720px)
+          width: 80%
+          margin: 0 auto
+          margin-bottom: -40%
