Add STC case (WIP)

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -19,6 +19,7 @@
       width: 100%
       margin-bottom: -0.3rem
       min-height: 30rem
+      object-fit: cover
 
     > .content
       position: absolute
