--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -30,6 +30,7 @@
       > .text
         margin-bottom: 2.5rem
         white-space: pre-line
+        opacity: .8
 
       > .item
         margin-top: 2.6rem
@@ -57,6 +58,11 @@
         font-size: 4rem
         font-weight: 500
         white-space: pre-line
+        @media screen and (max-width: 1000px)
+          font-size: 2.5rem
+
+        @media screen and (max-width: 700px)
+          font-size: 2rem
 
       > p
         font-size: 2rem
