Edit max-width of video block

--- a/src/cases/components/large-image.sass
+++ b/src/cases/components/large-image.sass
@@ -8,13 +8,13 @@
       height: auto
       overflow: hidden
       margin-bottom: -3px
-      max-width: $max-width
+      max-width: 144rem
       width: 100%
       margin: auto
 
       > video
         height: auto
-        max-width: $max-width
+        max-width: 144rem
         width: 100%
         margin: auto
 
