Edit images for STC case

--- a/src/cases/stc.sass
+++ b/src/cases/stc.sass
@@ -22,10 +22,10 @@
       padding-bottom: 0
 
       > img
-        margin-right: -53rem
+        margin: 0 -53rem 5rem 0
         max-height: 63.5rem
         width: auto
-        height: 45vw
+        height: 30vw
 
       @media screen and (max-width: 720px)
         padding-bottom: 4rem
