--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -92,7 +92,7 @@
           height: 100%
           min-width: 100%
 
-    &:first-child, &:nth-child(4)
+    &:first-child
       grid-column: span 6
       height: 40rem
 
@@ -128,8 +128,6 @@
       .project:nth-child(4)
         grid-column: span 3
         height: 34rem
-
-        
 
   @media screen and (max-width: 800px)
     display: block
