--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -70,6 +70,26 @@
         margin-top: 1.6rem
         line-height: 2.8rem
 
+      > a
+        margin-top: -0.7rem
+        font-size: 1.8rem
+        color: $color-red
+        text-decoration: none
+
+        &:after
+          content: ''
+          display: inline-block
+          position: relative
+          top: 0.6rem
+          margin: 2rem 0.5rem 0 2rem
+          background: url('../../images/arrow-red.svg') no-repeat 0 0/100%
+          width: 7.7rem
+          height: 2.3rem
+          transition: margin 0.2s ease
+
+        &:hover::after
+          margin: 2rem 0 0 2.5rem
+
       @media screen and (max-width: 820px)
         padding-right: 1rem
         flex: 1
