Set white-space as pre-line on ceerers position title

--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -194,7 +194,7 @@
 
               > h3
                 font-size: 3rem
-                white-space: pre
+                white-space: pre-line
 
             > p
               line-height: 2.4rem
