Hide career positions if no positions are available + ran standard --fix

--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -117,8 +117,10 @@
             > .image
               margin: 0 0 0 8rem
 
+    > .positions, > .team
+      margin-top: 25rem
+
     > .positions
-      margin: 25rem 0
       position: relative
       padding: 0 1rem
 
@@ -232,8 +234,8 @@
       > .workplaces, > .positions
         padding: 0
 
-      > .positions
-        margin: 4rem 0
+      > .positions, > .team
+        margin-top: 4rem
 
       > .workplaces, > .positions
         left: -3rem
