--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -43,10 +43,6 @@
         > ul
           margin: 2rem 0 0 1.5rem
 
-        > h1
-          font-size: 4rem
-          font-weight: 500
-
         > p
           margin-top: 1.6rem
           max-width: 52rem
@@ -98,7 +94,8 @@
           width: 100%
 
           > p
-            margin: auto
+            margin-left: auto
+            margin-right: auto
             text-align: center
 
           > ul
