--- a/src/index.sass
+++ b/src/index.sass
@@ -30,6 +30,13 @@ a
 
 h1
   font-size: 4rem
+  font-weight: 500
+
+  @media screen and (max-width: 1000px)
+    font-size: 3rem
+
+  @media screen and (max-width: 700px)
+    font-size: 2.5rem
 
 .app
   display: block
