--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -31,6 +31,7 @@
       color: inherit
       font-size: inherit
       transition: color 0.1s ease
+      text-decoration: underline
 
       &:hover
         opacity: 1
@@ -39,6 +40,9 @@
       > svg
         position: relative
         width: 4rem
+
+      &.languageToggle
+        margin-left: auto
 
     > .navMenu
       background: none
