Add ContantBlock on /home and /cases routes

--- a/src/settings.sass
+++ b/src/settings.sass
@@ -1,6 +1,6 @@
-$color-red: #EC193E
+$color-red: #ec193e
 $color-dark-blue: #151b28
-$color-darker-blue: #070B13
+$color-darker-blue: #070b13
 
 $max-width: 120rem
 $global-padding: 9.6rem 3rem
