Add Slack integration from contact form

--- a/src/components/contact-block.sass
+++ b/src/components/contact-block.sass
@@ -76,6 +76,10 @@
   .message
     margin-bottom: 4rem
 
+  .error
+    margin-top: 2rem
+    color: $color-red
+
   .close
     position: absolute
     top: 2rem
