Make hero slightly smaller to show cases

--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -17,7 +17,7 @@
     > .welcome
       align-items: center
       display: flex
-      height: 100vh
+      height: #{'max(75vh, 100vh - 20rem)'}
       margin-top: -19rem
       min-height: 45rem
       position: relative
@@ -121,7 +121,6 @@
         z-index: -1
 
     > .work
-      margin-top: 10rem
       margin-bottom: 27rem
       position: relative
 
