Mobile view for filter block

--- a/src/components/filter-block.sass
+++ b/src/components/filter-block.sass
@@ -16,5 +16,44 @@
       color: $color-red
       text-decoration: underline
 
+  .filter, .chevron
+    display: none
+
   @media screen and (max-width: 1000px)
     margin: 0 auto
+
+  @media screen and (max-width: 470px)
+    display: flex
+    cursor: pointer
+
+    &.open
+      flex-direction: column
+
+      a:not(:last-child)
+        margin-bottom: 1rem
+
+      .filter
+        margin-bottom: 3rem
+
+    &:not(.open)
+      .chevron
+        display: inline-block
+
+      a
+        pointer-events: none
+
+      a:not(.active)
+        display: none
+
+    .filter
+      display: block
+      appearance: none
+      background: transparent
+      border: 0
+      font: inherit
+      color: #8d939e
+      text-align: left
+      margin-right: 1.5rem
+
+    .chevron
+      margin-left: 0.5rem
