Set correct height on second home project block if 5 projects

--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -124,6 +124,9 @@
         grid-column: span 2
 
     &.amount5
+      .project:nth-child(1), .project:nth-child(2)
+        height: 40rem
+
       .project:nth-child(3), .project:nth-child(4), .project:nth-child(5)
         grid-column: span 2
 
