--- a/src/index.sass
+++ b/src/index.sass
@@ -22,7 +22,7 @@ html, button
 a
   color: #000
   text-decoration: none
-  transition: opacity 0.1s ease
+  transition: opacity 0.1s ease, color 0.1s ease
   font-weight: 500
 
   &:hover
