--- a/src/components/footer.sass
+++ b/src/components/footer.sass
@@ -1,113 +1,98 @@
 @import '../settings.sass'
 
 .footer
-  display: flex
-  justify-content: center
-  position: relative
-  width: 100%
   background: #060910
+  color: white
+
+  &.light
+    background: #f9f9f9
+    color: $color-darker-blue
+
+  a
+    color: inherit
+    display: inline-block
+
+    &:hover
+      opacity: 1
+      color: $color-red
 
   > .inner
-    align-items: center
-    display: flex
-    flex-direction: column
-    height: 100%
-    justify-content: space-between
     max-width: $max-width
-    padding: 5rem 3rem
     width: 100%
+    margin: 0 auto
+    padding: 5rem 3rem
 
-    > .first
-      display: inline-flex
-      justify-content: space-between
-      position: relative
-      width: 100%
+.logo
+  margin-right: 8rem
 
-      > .talkToUs
-        max-width: 25rem
+  svg
+    width: 4rem
+    height: 4rem
+    display: block
 
-        > h2
-          font-size: 3rem
-          margin-bottom: 2rem
+.social
+  font-size: 0
 
-        > a
-          color: inherit
-          font-size: 2rem
-          opacity: 0.6
-          text-decoration: underline
+  > a
+    margin-left: 5rem
 
-      > .menu
-        display: flex
-        flex-direction: column
-        font-size: 1.8rem
-        font-weight: lighter
-        letter-spacing: 0.045rem
-        line-height: 3rem
+  svg
+    width: 1.9rem
+    height: 1.9rem
+    display: block
 
-        > a
-          color: inherit
+.contact
+  margin-top: 3rem
+  color: #8d939e
 
-      > .contact
-        font-size: 1.8rem
-        font-weight: lighter
-        line-height: 2.5rem
+@media screen and (max-width: 800px)
+  .footer > .inner
+    padding: 4rem 3rem
 
-        > a
-          color: inherit
-
-        *:nth-child(4), *:nth-child(6)
-          margin-top: 3rem
-
-    > hr
-      background: white
-      border: 0
-      height: 0.1rem
-      margin: 5rem 0
+  .contact
+    &:before
+      content: ''
+      background: currentColor
       opacity: 0.1
-      width: 100%
+      height: 1px
+      display: block
+      margin-bottom: 4rem
 
-    > .second
-      align-items: center
-      display: flex
-      justify-content: space-between
-      width: 100%
+    margin-top: 4rem
+    text-align: center
 
-      > a
-        color: inherit
+    .name
+      display: block
 
-        > .logo
-          width: 4rem
+  .social
+    text-align: right
 
-      > .social
+  .menu
+    margin-bottom: 5rem
+    display: grid
+    grid-template-columns: 8rem 8rem
+    grid-gap: 2rem 4rem
+    justify-content: end
+    text-align: right
 
-        > a
-          color: inherit
+  .row
+    position: relative
 
-          > svg
-            width: 1.9rem
+  .logo
+    position: absolute
+    bottom: -1rem
+    left: 0
 
-        *:not(:last-child)
-          margin-right: 5rem
+@media screen and (min-width: 801px)
+  .contact
+    margin-left: 8rem + 4rem
 
-  &.dark
-    background: #F9F9F9
+  .row
+    display: flex
+    align-items: center
 
-    > .inner
-      color: black
+  .social
+    margin-left: auto
 
-      > hr
-        background: black
-
-  @media screen and (max-width: 800px)
-    > .inner
-
-      > .first
-        display: block
-        width: 100%
-
-        > .talkToUs
-          margin-bottom: 4rem
-          max-width: 100%
-
-        > .menu
-          display: none
+  .menu > a:not(:last-child)
+    margin-right: 4rem
