--- a/src/settings.sass
+++ b/src/settings.sass
@@ -8,3 +8,8 @@ $global-padding: 9.6rem 3rem
 $mobile: 415px
 $small-grid: 700px
 $medium-grid: 1040px
+
+$breakpoint-mobile-large: 720px
+$breakpoint-desktop: 1024px
+$breakpoint-desktop-large: 1350px
+
