--- a/src/cases/components/projects-block.sass
+++ b/src/cases/components/projects-block.sass
@@ -37,8 +37,6 @@
           left: -5rem
           margin-top: 0
 
-
-
     > .project
 
       > .gridBlock
@@ -48,3 +46,8 @@
         > .grid
           padding-left: 0
           padding-right: 0
+
+
+    @media screen and (max-width: 1000px)
+      > .project
+        grid-column: span 3
