--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -1,3 +1,5 @@
+@import '../settings.sass'
+
 .projects
   display: grid
   grid-gap: 2rem
@@ -6,15 +8,29 @@
   position: relative
 
   > .project
-    background: #eee
+    position: relative
     display: inline-flex
     height: 34rem
-    justify-content: space-between
-    overflow: hidden
-    padding: 4rem 4rem 0
-    position: relative
-    grid-column: span 3
     width: 100%
+    grid-column: span 3
+    justify-content: space-between
+    padding: 4rem 4rem 0
+    overflow: hidden
+
+    @media screen and (min-width: 801px)
+      &:hover
+        .overlay
+          opacity: 1
+
+        .details h3
+          transform: translateY(-2rem)
+
+        .details .desc
+          opacity: 0
+
+        .img
+          opacity: 1
+          transition: opacity 0.6s ease 0.1s
 
     &.animateIn
       animation: animateIn .5s ease forwards
@@ -27,125 +43,90 @@
     &.button
       padding: 0
 
-    > .details
-      margin-right: 2rem
-      min-width: 25rem
+    .overlay
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      z-index: 1
+      opacity: 0
+      transition: opacity 0.3s ease
+
+    .details
       position: relative
+      width: 100%
+      flex-shrink: 0
+      max-width: 32rem
+      overflow: hidden
       z-index: 2
 
-      \:global(.slideArrow)
-        bottom: 4rem
-        position: absolute
-
-        > span, > .arrow
-          transition: margin 0.15s ease-in, transform 0.15s ease-in, opacity 0.25s ease
-
-        > span
-          position: relative
-          white-space: nowrap
-          font-weight: bold
-
-        > .arrow
-          width: 3.8rem
-          top: calc(50% - 0.7rem) !important
-
-          &:first-child
-            position: absolute
-            opacity: 0
-            left: -8rem
-
-          &:last-child
-            transition-delay: 0s
-            position: absolute
-            margin-left: 2rem
-
-      > h3
-        font-size: 2rem
-
-      > .desc
-        font-size: 2rem
-        margin: 2rem 0
-
-      > .type
-        font-size: 1.6rem
-        font-weight: 600
+      .type
+        margin-bottom: 3rem
+        font-size: 1.4rem
         text-transform: uppercase
+        width: 100%
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
 
-      @media screen and (min-width: 801px)
-        &.small
+      h3
+        margin-bottom: 1rem
+        font-size: 3rem
+        font-weight: 600
+        transform: translateY(0rem)
+        transition: transform 0.4s ease-out
 
-          > .desc
-            font-size: 1.5rem
+      .desc
+        font-size: 2rem
+        font-weight: 400
+        opacity: 1
+        transition: opacity 0.2s ease
 
-          > .type
-            font-size: 1.4rem
-
-    > img
+    .img
       position: relative
-      z-index: 1
       height: 100%
+      opacity: 0
+      transition: opacity 0.3s ease 0s
 
       &.background
         position: absolute
         top: 0
         left: 0
+        height: 100%
+        width: 100%
         object-fit: cover
-        z-index: 0
+        object-position: center
 
-        &.height
-          height: 100%
-          min-width: 100%
+        // &.height
+        //   height: 100%
+        //   min-width: 100%
 
-        &.width
-          height: 100%
-          min-width: 100%
+        // &.width
+        //   height: 100%
+        //   min-width: 100%
 
-    &:first-child
-      grid-column: span 6
-      height: 40rem
-
-    &:nth-child(4), &:nth-child(5), &:nth-child(6),
-    &:nth-child(9), &:nth-child(10), &:nth-child(11),
-    &:nth-child(14), &:nth-child(15), &:nth-child(16),
-    &:nth-child(19), &:nth-child(20), &:nth-child(21),
-      grid-column: span 2
-
-  &.homeProjects
-    &.amount1
-      .project:nth-child(1)
-        grid-column: span 6
-
-    &.amount2, &.amount5
-      .project:nth-child(1), .project:nth-child(2)
-        grid-column: span 3
-
-    &.amount4
-      .project:nth-child(2), .project:nth-child(3), .project:nth-child(4)
-        grid-column: span 2
-
-    &.amount5
-      .project:nth-child(1), .project:nth-child(2)
-        height: 40rem
-
-      .project:nth-child(3), .project:nth-child(4), .project:nth-child(5)
-        grid-column: span 2
+    @for $i from 1 through 20
+      @if $i % 5 == 1 or $i % 5 == 2
+        &:nth-child(#{$i})
+          grid-column: span 3
+      @else
+        &:nth-child(#{$i})
+          grid-column: span 2
 
   &.browseCase
     > .project
-       &:nth-child(1), &:nth-child(2), &:nth-child(3)
+      &:nth-child(1), &:nth-child(2), &:nth-child(3)
         grid-column: span 2
-        height: 34rem
 
   @media screen and (max-width: 1000px)
     > .project
       &:nth-child(n+2)
         grid-column: span 3
-        height: 34rem
 
     &.homeProjects
       .project:nth-child(4)
         grid-column: span 3
-        height: 34rem
 
   @media screen and (max-width: 800px)
     display: block
@@ -153,17 +134,29 @@
     width: 100vw
 
     > .project
+      margin-bottom: 2rem
 
-      > .details
-        margin-right: 1rem
+  \:global(.slideArrow)
+    bottom: 4rem
+    position: absolute
+    display: flex
+    align-items: center
+
+    @media screen and (min-width: #{$breakpoint-desktop})
+      transform: translateX(calc(-100% + 3.8rem))
+      transition: transform .3s ease-out
+
+    .arrow
+      width: 3.8rem
+      margin-left: 1rem
 
   // special rules for cases
-  \:global(#nordish-market)
-    @media screen and (max-width: 875px)
-      padding-right: 1rem
-      > div:nth-child(2)
-        min-width: 100% !important
-        padding-right: 0
+  // \:global(#nordish-market)
+  //   @media screen and (max-width: 875px)
+  //     padding-right: 1rem
+  //     > div:nth-child(2)
+  //       min-width: 100% !important
+  //       padding-right: 0
 
 @keyframes animateIn
   from
