--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -19,12 +19,12 @@
       display: flex
       height: #{'max(75vh, 100vh - 20rem)'}
       margin-top: -19rem
-      min-height: 45rem
+      min-height: 50rem
       position: relative
 
       > h1
         font-weight: bold
-        margin-left: 10rem
+        margin-left: 5rem
         max-width: 75rem
         position: relative
         z-index: 1
@@ -32,6 +32,7 @@
         animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         &.firstView
+          opacity: 0
           animation: slideInBottom 0.8s 1.1s, fadeIn 0.8s 1.1s forwards
 
         > span
@@ -56,7 +57,7 @@
 
         > h1
           color: $color-red
-          margin: 0 0 5rem 10rem
+          margin: 0 0 5rem 5rem
 
         > p
           color: white
@@ -125,7 +126,7 @@
       position: relative
 
       > .text
-        margin-left: 10rem
+        margin-left: 5rem
 
         > h1
           color: $color-red
@@ -137,8 +138,12 @@
           margin-top: 2rem
           max-width: 37.7rem
 
+      > .filterBlock
+        @media screen and (min-width: 801px)
+          margin: 0 0 0 5rem
+
       > .button
-        left: calc(100% - 10rem)
+        left: calc(100% - 5rem)
         position: relative
         top: 2rem
         transform: translateX(-100%)
